<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:elevation="0dp">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:scrimAnimationDuration="200"
            app:scrimVisibleHeightTrigger="90dp"
            app:titleEnabled="false">

            <ImageView
                android:id="@+id/book_img_poster"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:alpha="0.5"
                android:contentDescription="@string/app_name"
                android:fitsSystemWindows="true"
                android:minHeight="350dp"
                android:scaleType="centerCrop"
                tools:src="@drawable/default_poster"
                app:layout_collapseMode="parallax"
                app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:alpha="0.7"
                android:background="@color/transparent_dark"
                android:orientation="vertical"
                app:layout_collapseMode="parallax"
                app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed">

                <TextView
                    android:id="@+id/book_btn_reading"
                    style="@style/AppTheme.Text.Body"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/space_36"
                    android:layout_margin="@dimen/space_8"
                    android:minWidth="150dp"
                    android:paddingLeft="@dimen/space_16"
                    android:paddingRight="@dimen/space_16"
                    android:gravity="center"
                    android:background="@drawable/ds_book_detail_reading_bg"
                    android:drawableLeft="@drawable/ic_bottom_bar_libs"
                    android:drawablePadding="@dimen/space_8"
                    android:text="@string/book_action_reading"
                    android:textStyle="bold"
                    android:tint="@color/text_light_1" />

                <TextView
                    android:id="@+id/book_btn_list_chapter"
                    style="@style/AppTheme.Text.Body"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/space_36"
                    android:layout_margin="@dimen/space_8"
                    android:minWidth="150dp"
                    android:paddingLeft="@dimen/space_16"
                    android:paddingRight="@dimen/space_16"
                    android:gravity="center"
                    android:background="@drawable/ds_book_detail_reading_bg"
                    android:drawablePadding="@dimen/space_8"
                    android:drawableLeft="@drawable/ic_list_chapter_white_24"
                    android:text="@string/book_action_list_chapter"
                    android:textStyle="bold"
                    android:tint="@color/text_light_1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="150dp"
                android:layout_gravity="bottom"
                android:gravity="bottom"
                android:background="@drawable/ds_widget_home_block_item_title_bg"
                android:orientation="vertical"
                app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed">

                <TextView
                    android:id="@+id/book_tv_author"
                    style="@style/AppTheme.Text.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/space_16"
                    android:layout_marginRight="@dimen/space_16"
                    android:layout_marginTop="28dp"
                    android:text="@string/sample_text_book_author"
                    android:textAllCaps="false"
                    android:textColor="@color/text_light_1"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/book_tv_name"
                    style="@style/Base.TextAppearance.AppCompat.Display1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/space_2"
                    android:paddingLeft="@dimen/space_16"
                    android:paddingRight="@dimen/space_16"
                    android:paddingTop="@dimen/space_2"
                    android:text="@string/sample_book_title"
                    android:textAllCaps="true"
                    android:textColor="@color/text_light_1"
                    android:textStyle="bold"
                    android:maxLines="32"
                    android:ellipsize="end"
                    tools:text="Pham Nhan Tu Tien Truyen"
                    />

                <TextView
                    android:id="@+id/book_tv_chapter"
                    style="@style/AppTheme.Text.Body"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/space_16"
                    android:layout_marginRight="@dimen/space_16"
                    android:text="@string/sample_book_chapter"
                    android:textColor="@color/text_light_1" />

            </LinearLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/book_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="scroll|enterAlways"/>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/rvToDoList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_dark"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/book_line1"
                android:layout_width="@dimen/space_36"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/space_24"
                android:layout_marginLeft="@dimen/space_16"
                android:layout_marginRight="@dimen/space_16"
                android:background="@color/blue_light" />

            <TextView
                android:id="@+id/book_tv_likes"
                style="@style/AppTheme.Text.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_16"
                android:layout_marginLeft="@dimen/space_16"
                android:layout_marginRight="@dimen/space_16"
                android:layout_below="@+id/book_line1"
                android:gravity="center_vertical"
                android:drawableStart="@drawable/ic_favorite_border_white_18dp"
                android:drawableLeft="@drawable/ic_favorite_border_white_18dp"
                android:drawablePadding="@dimen/space_8"
                android:textSize="@dimen/text_size_14sp"
                android:text="@string/sample_book_likes"/>

            <TextView
                android:id="@+id/book_tv_viewed"
                style="@style/AppTheme.Text.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_8"
                android:layout_marginLeft="@dimen/space_16"
                android:layout_marginRight="@dimen/space_16"
                android:layout_below="@+id/book_tv_likes"
                android:gravity="center_vertical"
                android:drawableStart="@drawable/ic_visibility_white_18dp"
                android:drawableLeft="@drawable/ic_visibility_white_18dp"
                android:drawablePadding="@dimen/space_8"
                android:textSize="@dimen/text_size_14sp"
                android:text="@string/sample_book_viewed"/>

            <LinearLayout
                android:id="@+id/book_layout_ratting"
                android:layout_width="@dimen/space_72"
                android:layout_height="@dimen/space_72"
                android:layout_marginBottom="@dimen/space_24"
                android:layout_marginLeft="@dimen/space_16"
                android:layout_marginRight="@dimen/space_16"
                android:layout_below="@+id/book_line1"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:background="@drawable/ds_book_detail_rating_bg"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:id="@+id/book_tv_rating"
                    style="@style/AppTheme.Text.Display"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/book_detail_text_rating_default"
                    android:textColor="@color/blue_light"
                    android:textStyle="bold" />

                <TextView
                    style="@style/AppTheme.Text.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_4"
                    android:gravity="bottom"
                    android:text="@string/book_detail_text_rating_total"/>

            </LinearLayout>

            <TextView
                android:id="@+id/book_tv_des_title"
                style="@style/AppTheme.Text.Body.Bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/book_layout_ratting"
                android:paddingTop="@dimen/space_16"
                android:paddingLeft="@dimen/space_16"
                android:paddingRight="@dimen/space_16"
                android:background="@color/bluegray_light"
                android:text="@string/book_detail_text_des_title"/>

            <TextView
                android:id="@+id/book_tv_des"
                style="@style/AppTheme.Text.Body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/book_tv_des_title"
                android:padding="@dimen/space_16"
                android:background="@color/bluegray_light"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/sample_book_detail_des"/>

            <FrameLayout
                android:id="@+id/book_layout_ads"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/book_tv_des"/>

            <TextView
                android:id="@+id/book_fb_cmt"
                android:layout_below="@+id/book_layout_ads"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:padding="@dimen/space_16"
                android:text="Facebook comment"/>

        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>

    <FrameLayout
        android:id="@+id/book_layout_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_80"
        android:visibility="gone">

        <TextView
            android:id="@+id/book_tv_error"
            style="@style/AppTheme.Text.Body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableBottom="@drawable/ic_refresh"
            android:drawablePadding="@dimen/space_16"
            android:gravity="center"
            android:lineSpacingMultiplier="1.3"
            android:orientation="vertical"
            android:padding="@dimen/space_24"
            android:textColor="@color/text_light_1"
            android:text="@string/error_msg_no_data" />

    </FrameLayout>

</android.support.design.widget.CoordinatorLayout>