<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottom_bar_root"
    android:layout_width="match_parent"
    android:layout_height="?android:attr/actionBarSize"
    android:layout_gravity="bottom"
    android:orientation="horizontal"
    android:weightSum="4"
    android:background="@color/background_dark_87"
    android:baselineAligned="false">

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:paddingLeft="12dp"
        android:paddingRight="12dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/bottom_bar_text_kham_pha"
            android:tint="@color/blue"
            android:src="@drawable/ic_bottom_bar_home" />

        <TextView
            style="@style/AppTheme.Text.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="8dp"
            android:text="@string/bottom_bar_text_kham_pha"
            android:textColor="@color/blue" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:alpha="0.67">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/bottom_bar_text_danh_muc"
            android:src="@drawable/ic_bottom_bar_category" />

        <TextView
            style="@style/AppTheme.Text.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="8dp"
            android:text="@string/bottom_bar_text_danh_muc"
            android:textColor="@color/text_light_1" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:alpha="0.6">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/bottom_bar_text_thu_vien"
            android:src="@drawable/ic_bottom_bar_libs" />

        <TextView
            style="@style/AppTheme.Text.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="8dp"
            android:text="@string/bottom_bar_text_thu_vien"
            android:textColor="@color/text_light_1" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:alpha="0.6">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/bottom_bar_text_ca_nhan"
            android:src="@drawable/ic_bottom_bar_person" />

        <TextView
            style="@style/AppTheme.Text.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="8dp"
            android:text="@string/bottom_bar_text_ca_nhan"
            android:textColor="@color/text_light_1" />

    </FrameLayout>

</LinearLayout>