<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/space_8"
    android:background="@color/background_dark"
    android:orientation="vertical">

    <android.support.v4.view.ViewPager
        android:id="@+id/widget_book_slider_viewPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:gravity="center"
        android:background="@drawable/ds_widget_slider_bg"
        tools:layout_height="160dp" />

    <LinearLayout
        android:id="@+id/widget_book_slider_pager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_alignBottom="@+id/widget_book_slider_viewPager"/>

    <LinearLayout
        android:id="@+id/widget_book_btn_group1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_12"
        android:layout_marginBottom="@dimen/space_12"
        android:layout_marginLeft="@dimen/space_12"
        android:layout_marginRight="@dimen/space_12"
        android:layout_below="@+id/widget_book_slider_viewPager"
        android:orientation="horizontal"
        android:weightSum="2"
        android:baselineAligned="false"
        android:visibility="visible">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/widget_book_slider_btn_viewed"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_margin="@dimen/space_4"
            android:layout_weight="1"
            android:background="@drawable/ds_widget_slider_btn_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@drawable/ds_widget_slider_btn_icon"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/space_6"
                android:src="@drawable/ic_widget_slider_btn_view" />

            <TextView
                style="@style/AppTheme.Text.Body.Bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_8"
                android:layout_marginRight="@dimen/space_8"
                android:text="@string/widget_slider_action_most_viewed" />

        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/widget_book_slider_btn_new"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_margin="@dimen/space_4"
            android:layout_weight="1"
            android:background="@drawable/ds_widget_slider_btn_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@drawable/ds_widget_slider_btn_icon"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/space_6"
                android:src="@drawable/ic_widget_slider_btn_favorite" />

            <TextView
                style="@style/AppTheme.Text.Body.Bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_8"
                android:layout_marginRight="@dimen/space_8"
                android:text="@string/widget_slider_action_most_favorite" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>